# ExamenFinal

./: README.md
install/: local_setup.sh  setup.sh
install/evs_robot_controller/lib/evs_robot_controller/: square_trajectory
install/evs_robot_controller/share/evs_robot_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_description/share/robot_description/: package.sh  package.xml
log/: latest_build
src/evs_robot_controller/: setup.cfg  setup.py
src/robot_description/: CMakeLists.txt
src/robot_description/config/: RobotIndustrial_rviz  robot_description.yaml
src/robot_description/launch/: display.launch.py
src/robot_description/urdf/: RobotIndustrial.urdf
